--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
 *Resources/
-Regular-Exam/**/*.docs
-Regular-Exam/**/text.txt
-Regular-Exam/screenshot.*.png
+/**/Regular-Exam/**/*.docs
+/**/Regular-Exam/**/text.txt
+/**/Regular-Exam/screenshot.*.png
