--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
 *Resources/
 /**/Regular-Exam/**/*.docx
 /**/Regular-Exam/**/text.txt
-/**/Regular-Exam/**/screenshot.*.png
+/**/Regular-Exam/**/screenshot*.png
